--- a/gistTheme.css
+++ b/gistTheme.css
@@ -146,3 +146,20 @@ body .gist .pl-iu {
 body .gist .gist-meta {
     display: none;
 }
+body .gist .gist-meta {
+    display: none;
+ }
+ body .gist .gist-file {
+    margin-bottom: 0;
+    border: 1px dashed #adb5bd;
+    border-radius: 0;
+}
+
+body .gist .gist-data {
+    border-bottom: none;
+    border-radius: 0;
+    background-color: #f1f3f5;
+}
+ body .gist .blob-wrapper {
+    border-radius: 10px;
+ }
